--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,20 @@
 {
   "presets": [
-    ["env"]
+    [
+      "env"
+    ]
   ],
   "plugins": [
-    "transform-runtime"
+    "transform-runtime",
+    [
+      "component",
+      [
+        {
+          "libraryName": "element-ui",
+          "styleLibraryName": "theme-chalk"
+        }
+      ]
+    ]
   ],
   "comments": false
 }
