--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-component": "^1.0.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "deep-assign": "^2.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.6",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "vue": "^2.5.13",
     "vue-loader": "^11.3.3",
     "vue-router": "^3.0.1",
